@@ -152,7 +152,7 @@ Then we use our M0 Line macro assembler to convert our assembly into hex2 format
 Then we need to assemble that hex into our desired program:
 ./bin/vm --rom roms/stage1_assembler-2 --tape_01 temp2 --tape_02 roms/lisp --memory 48K
 
-roms/lisp should have the sha256sum of a4f2c8e694da42ce588d2cdc64b7551ceecb18870ae365621631fb0ead6c9769
+roms/lisp should have the sha256sum of 15fdc4c90e919ddd6d5c2660a2d3d9bd1589dfbc6559b82d91ab99a9c10d2d81
 
 Our lisp will first attempt to evaluate any code in tape_01 and then evaluate any code that the user types in.
 It is recommended to run with no less than 4MB of Memory
