@@ -38,6 +38,7 @@ Added rain1's new user forth starting script, which is not actually required for
 Added Most primitive raw string support to stage2 lisp
 Added integer->char and char->integer to stage2 lisp
 Added string->list primitive to stage2 lisp
+Added char? primitive to stage2 lisp
 
 ** Changed
 Minor refactor of stage3 FORTH by reepa
